2010-02-28  Romain Francois <romain@r-enthusiasts.com>

    * src/Rcpp/Vector.h : more generic code for vectors. All vector 
    types are now generated from the template Rcpp::Vector<int RTYPE>
    where RTYPE is one of INTSXP, LGLSXP, REALSXP, RAWSXP, STRSXP, 
    VECSXP or EXPRSXP. 

2010-02-24  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/exceptions.h: some exception classes factored out 
	
	* src/Rcpp/VectorBase.h: now a template, using the 
	Curiously recurring template pattern (the type parameter is
	the derived class)

	* src/Rcpp/SEXP_Vector.h: the intermediate class 
	SEXP_Vector_Base is removed, reverting the change on 
	2010-02-09. This will facilitate the introduction of the 
	Curiously recurring template pattern on vectors

	* src/Rcpp/MatrixRow.h : Row has been factored out of SimpleVector
	into a separate template class Rcpp::MatrixRow
	
	* src/Rcpp/SimpleVector.h: gains a row method that returns 
	a SimpleVector::Row, aka MatrixRow<SimpleVector>
	
	* src/Rcpp/CharacterVector.h : gains a row method that returns
	a CharacterVector::Row, aka MatrixRow<CharacterVector>
	
	* src/Rcpp/SEXP_Vector.h : gains a row method that returns 
	a SEXP_Vector::Row aka MatrixRow<SEXP_Vector>

	* src/Rcpp/MatrixColumn.h : Column class to access elements of a 
	matrix column

2010-02-23  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/SimpleVector.h: added the class SimpleVector::Row
	to support STL algorithms working on a row of a matrix. 

	* src/Rcpp/internal/ListInitialization.h: new class that 
	supports use of operator, (inspired from blitz) giving this 
	notation: IntegerVector x(3); x = 0, 1, 2 ;

2010-02-21  Romain Francois <romain@r-enthusiasts.com>

	* src/Rcpp/as.h: more generic as implementation. primitive 
	types are handled through templates which for example makes 
	it possible to as<GPB::int64> in RProtoBuf. std::deque<T>
	and std::list<T> become as'able when T is a primitive type
	as indicated by the Rcpp::traits::r_type_traits 
	